--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
-org.gradle.jvmargs=-Xmx6g
+org.gradle.jvmargs=-Xmx6g -XX:+UseParallelGC
+kotlin.daemon.jvmargs=-Xmx5g -XX:+UseG1GC
+org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
 kapt.incremental.apt=false
-android.experimental.androidTest.numManagedDeviceShards=4
