--- a/reproducible-builds/docker-compose.yml
+++ b/reproducible-builds/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - ./certs:/molly/app/certs:ro
       - ./outputs:/molly/app/build/outputs
     environment:
+      - GRADLE_OPTS
       - CI_APP_TITLE
       - CI_APP_FILENAME
       - CI_PACKAGE_ID
