--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,17 +27,11 @@ jobs:
   test:
     name: Run tests
     runs-on: ubuntu-22.04
+    env:
+      GRADLE_OPTS: "-Dorg.gradle.project.kotlin.compiler.execution.strategy=in-process"
 
     steps:
       - uses: actions/checkout@v3
-
-      - name: Increase swap space
-        run: |
-          sudo fallocate -l 8G /swapB
-          sudo chmod 600 /swapB
-          sudo mkswap /swapB
-          sudo swapon /swapB
-          swapon --show
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
