Disable bundle language split
Fixes #188

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -234,6 +234,12 @@ android {
 
         resConfigs autoResConfig()
 
+        bundle {
+            language {
+                enableSplit = false
+            }
+        }
+
         testInstrumentationRunner "org.thoughtcrime.securesms.testing.SignalTestRunner"
         testInstrumentationRunnerArguments clearPackageData: 'true'
     }
