Fix missing task dependency in libsignal wire

--- a/libsignal/service/build.gradle
+++ b/libsignal/service/build.gradle
@@ -28,6 +28,12 @@ configurations {
     ideaTestFixturesImplementation { extendsFrom testFixturesImplementation; canBeConsumed false; canBeResolved true }
 }
 
+afterEvaluate {
+    tasks.named('sourcesJar') {
+        dependsOn tasks.named('generateMainProtos')
+    }
+}
+
 dependencies {
     implementation libs.google.protobuf.javalite
     api libs.google.libphonenumber
