--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -120,6 +120,7 @@ dependencyResolutionManagement {
             library('gosimple-nbvcxz', 'me.gosimple:nbvcxz:1.5.0')
             library('molly-native-utils', 'im.molly:native-utils:1.0.0')
             library('molly-argon2', 'im.molly:argon2:13.1-1')
+            library('molly-glide-webp-decoder', 'im.molly:glide-webp-decoder:1.3.2-1')
 
             // Third Party
             library('greenrobot-eventbus', 'org.greenrobot:eventbus:3.0.0')
