--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -5,9 +5,6 @@ on:
   schedule:
     - cron: '0 0 * * *'
 
-permissions:
-  contents: read
-
 jobs:
   sync:
     name: Sync
@@ -19,7 +16,7 @@ jobs:
         with:
           ref: upstream
           fetch-depth: 0
-          token: ${{ secrets.PUBLISH_PAT }}
+          token: ${{ secrets.PUBLISH_PAT || secrets.GITHUB_TOKEN }}
 
       - name: Fetch and merge upstream
         run: |
