--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ kotlin.daemon.jvmargs=-Xmx5g -XX:+UseG1GC
 org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
+android.jetifier.ignorelist=jackson-core
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
